--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 
   nav { position:fixed; top:0; width:100%; z-index:1000; background:rgba(27,12,10,0.9); backdrop-filter:blur(12px); border-bottom:1px solid rgba(228,182,157,0.15); padding:0 40px; display:flex; align-items:center; justify-content:space-between; height:80px; }
   .nav-logo-wrap { display:flex; align-items:center; gap:12px; text-decoration:none; }
-  .nav-logo-text { font-family:'Allura',cursive; font-size:26px; color:var(--peach); }
+  .nav-logo-text { font-family: 'Playfair Display', serif; font-size: 22px; font-weight: 700; color: var(--peach); }
   .nav-links { display:flex; gap:32px; list-style:none; }
   .nav-links a { text-decoration:none; color:var(--gold); font-size:13px; font-weight:500; letter-spacing:1.5px; text-transform:uppercase; transition:color 0.3s; position:relative; }
   .nav-links a::after { content:''; position:absolute; bottom:-4px; left:0; width:0; height:2px; background:var(--peach); transition:width 0.3s; }
