--- a/newsletter.html
+++ b/newsletter.html
@@ -29,7 +29,7 @@
   }
   .nav-logo-wrap { display: flex; align-items: center; gap: 12px; text-decoration: none; }
   .nav-logo-img { width: 56px; height: 56px; border-radius: 50%; object-fit: cover; border: 2px solid rgba(228,182,157,0.3); }
-  .nav-logo-text { font-family: 'Allura', cursive; font-size: 26px; color: var(--peach); }
+  .nav-logo-text { font-family: 'Playfair Display', serif; font-size: 22px; font-weight: 700; color: var(--peach); }
   .nav-links { display: flex; gap: 32px; list-style: none; }
   .nav-links a { text-decoration: none; color: var(--gold); font-size: 13px; font-weight: 500; letter-spacing: 1.5px; text-transform: uppercase; transition: color 0.3s; position: relative; }
   .nav-links a::after { content: ''; position: absolute; bottom: -4px; left: 0; width: 0; height: 2px; background: var(--peach); transition: width 0.3s; }
